# ome-files-performance

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  Statistics.ipynb  metadata-pixeldata.md  plots.R  pom.xml  run_performance
analysis/: summary-metadata-repeated.tsv  summary-metadata-separate.tsv  summary-pixeldata-repeated.tsv  summary-pixeldata-separate.tsv
cmake/: BoostChecks.cmake  FindBioFormatsJACE.cmake  JACEPrerequisites.cmake
doc/: basic-tile-performance.md  metadata-pixeldata.md
results/: bbbc-metadata-linux-cpp-1.tsv  bbbc-metadata-linux-cpp-10.tsv  bbbc-metadata-linux-cpp-11.tsv  bbbc-metadata-linux-cpp-12.tsv  bbbc-metadata-linux-cpp-13.tsv  bbbc-metadata-linux-cpp-14.tsv  bbbc-metadata-linux-cpp-15.tsv  bbbc-metadata-linux-cpp-16.tsv  bbbc-metadata-linux-cpp-17.tsv  bbbc-metadata-linux-cpp-18.tsv  bbbc-metadata-linux-cpp-19.tsv  bbbc-metadata-linux-cpp-2.tsv  bbbc-metadata-linux-cpp-20.tsv  bbbc-metadata-linux-cpp-3.tsv  bbbc-metadata-linux-cpp-4.tsv  bbbc-metadata-linux-cpp-5.tsv  bbbc-metadata-linux-cpp-6.tsv  bbbc-metadata-linux-cpp-7.tsv  bbbc-metadata-linux-cpp-8.tsv  bbbc-metadata-linux-cpp-9.tsv  bbbc-metadata-linux-cpp.tsv  bbbc-metadata-linux-jace-1.tsv  bbbc-metadata-linux-jace-10.tsv  bbbc-metadata-linux-jace-11.tsv  bbbc-metadata-linux-jace-12.tsv  bbbc-metadata-linux-jace-13.tsv  bbbc-metadata-linux-jace-14.tsv  bbbc-metadata-linux-jace-15.tsv  bbbc-metadata-linux-jace-16.tsv  bbbc-metadata-linux-jace-17.tsv  bbbc-metadata-linux-jace-18.tsv  bbbc-metadata-linux-jace-19.tsv  bbbc-metadata-linux-jace-2.tsv  bbbc-metadata-linux-jace-20.tsv  bbbc-metadata-linux-jace-3.tsv  bbbc-metadata-linux-jace-4.tsv  bbbc-metadata-linux-jace-5.tsv  bbbc-metadata-linux-jace-6.tsv  bbbc-metadata-linux-jace-7.tsv  bbbc-metadata-linux-jace-8.tsv  (+595 more)
scripts/: cpp-tile-plots.R  jenkins-build  jenkins-build.bat  metadata-performance-java  metadata-performance-java.bat  metadata.bat  ometiff-performance-java  ometiff-performance-java.bat  pixeldata.bat  pixels-performance-java  pixels-performance-java.bat  plots.R  run_analysis  run_basic_tiling  run_benchmarking  run_cpp_tile_benchmarking  run_metadata  run_pixeldata  run_tiling  tiling.bat
src/main/cpp/: CMakeLists.txt  basic-tile-performance.cpp  metadata-performance.cpp  ometiff-performance.cpp  pixels-performance.cpp  read-performance.cpp  result.cpp  result.h  tile-performance.cpp
src/main/jace/: CMakeLists.txt  javaTools.cpp  javaTools.h  metadata-performance.cpp  ometiff-performance.cpp  pixels-performance.cpp  result.cpp  result.h
src/main/java/ome/files/performance/: BasicTilingPerformance.java  MetadataPerformance.java  OMETIFFPerformance.java  PixelsPerformance.java  Result.java  TilingPerformance.java  Timepoint.java
